# Home_Work_21_2

./: .flake8  .gitignore  pyproject.toml
pages/: main.html
